modules/gdscript/tests/scripts/analyzer/errors/enum_bad_method.gd
enum Enum {V1, V2}

func test():
	Enum.clear()
